Fix the overflow issue

--- a/common/common.scss
+++ b/common/common.scss
@@ -11,6 +11,10 @@ body textarea {
     font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
 
+section#main {
+    overflow-x: hidden;
+}
+
 .fa-heart:before {
     content: "\f164";
 }
